<?xml version="1.0"?>
<package format="2">
  <name>uav_rosplan</name>
  <version>1.0.0</version>
  <description>The MIMRee UAV local planner package</description>

  <maintainer email="ferdian.jovan@rhul.ac.uk">Ferdian Jovan</maintainer>


  <license>MIT</license>


  <!-- <url type="website">http://wiki.ros.org/uav_rosplan</url> -->

  <author email="ferdian.jovan@rhul.ac.uk">Ferdian Jovan</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


  <export>
  </export>
</package>
